syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = "github.com/robotlovesyou/fitest/pb";

message NewUser {
    string first_name = 1;
    string last_name = 2;
    string nickname = 3;
    string password = 4;
    string confirmPassword = 5;
    string email = 6;
    string country  = 7;
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string nickname = 4;
    string email = 5;
    string country  = 6;
    string created_at = 7;
    string updated_at = 8;
    int32 version = 9;
}

message UserUpdate {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string password = 4;
    string confirmPassword = 5;
    string country  = 6;
    int32 version = 7;
}

message UserRef {
    string id = 1;
}

service Users {
    rpc CreateUser(NewUser) returns (User) {}
    rpc UpdateUser(UserUpdate) returns (User) {}
    rpc DeleteUser(UserRef) returns (google.protobuf.Empty) {}
}

